--- a/frontend/css/original.css
+++ b/frontend/css/original.css
@@ -39,6 +39,10 @@ body, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
 	font-size: 24px;
 }
 
+.reveal ul {
+	display: block;
+}
+
 .reveal p, .reveal ul > li, .reveal ol > li {
 	font-size: 22px;
 }
