--- a/frontend/css/original.css
+++ b/frontend/css/original.css
@@ -67,6 +67,7 @@ body, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
 }
 
 .reveal section img {
+	margin: 5px 0;
 	border: 0;
 }
 
@@ -149,11 +150,11 @@ span.p2_place {
 }
 
 .colLeft {
-	width: 60%;
+	width: 35%;
 	float: left;
 }
 
 .colRight {
-	width: 35%;
+	width: 60%;
 	float: right;
 }
