--- a/graph-data/css/original.css
+++ b/graph-data/css/original.css
@@ -1,21 +1,14 @@
-/*
-#2B803E
-#437983
-#D49E6A
-#D4746A
-*/
-
 body, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
 	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", sans-serif;
 	text-transform: none;
-	color: #FFF;
+	color: #444;
 	font-size: 20px;
 	line-height: 1.6;
 }
 
 .reveal .slides {
-	border-left: solid 20px #222;
-	border-right: solid 20px #222;
+	border-left: solid 20px #FFF;
+	border-right: solid 20px #FFF;
 }
 
 .reveal .slides section {
@@ -53,11 +46,11 @@ body, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
 }
 
 .reveal a {
-	color: #D4746A;
+	color: #CF686F;
 }
 
 .reveal a:hover {
-	color: #D4746A;
+	color: #CF686F;
 	text-decoration: underline;
 }
 
@@ -72,19 +65,19 @@ body, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
 }
 
 .reveal .controls .navigate-left, .reveal .controls .navigate-left.enabled {
-	border-right-color: #437983;
+	border-right-color: #6A9E99;
 }
 
 .reveal .controls .navigate-right, .reveal .controls .navigate-right.enabled {
-	border-left-color: #437983;
+	border-left-color: #6A9E99;
 }
 
 .reveal .controls .navigate-up, .reveal .controls .navigate-up.enabled {
-	border-bottom-color: #437983;
+	border-bottom-color: #6A9E99;
 }
 
 .reveal .controls .navigate-down, .reveal .controls .navigate-down.enabled {
-	border-top-color: #437983;
+	border-top-color: #6A9E99;
 }
 
 
@@ -106,26 +99,22 @@ body, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
 
 
 .fa {
-	color: #D49E6A;
+	color: #D4AF6A;
 	font-size: 1.5em;
 }
 
 strong {
-	color: #AA7039;
+	color: #CF686F;
 }
 
 
 .reveal h1.pageHeader {
 	display: block;
 	padding: 5px 10px;
-	background: #2B803E;
+	background: #42847D;
 	color: #FFF;
 	text-align: left;
 	box-sizing: border-box;
-}
-
-.reveal h1.pageHeader.pageHeader-if {
-	background: #437983;
 }
 
 
