--- a/graph-data/css/original.css
+++ b/graph-data/css/original.css
@@ -17,18 +17,22 @@ body, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
 }
 
 .reveal h1 {
+	color: #42847D;
 	font-size: 36px;
 }
 
 .reveal h2 {
+	color: #42847D;
 	font-size: 32px;
 }
 
 .reveal h3 {
+	color: #42847D;
 	font-size: 28px;
 }
 
 .reveal h4 {
+	color: #42847D;
 	font-size: 24px;
 }
 
@@ -107,6 +111,23 @@ strong {
 	color: #CF686F;
 }
 
+hr {
+	border: 0;
+	border-top: solid 1px #6A9E99;
+}
+
+.pageBlock {
+	position: relative;
+	height: 100%;
+}
+
+.midBlock {
+	display: block;
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	transform: translateY(-55%);
+}
 
 .reveal h1.pageHeader {
 	display: block;
@@ -115,6 +136,10 @@ strong {
 	color: #FFF;
 	text-align: left;
 	box-sizing: border-box;
+}
+
+.reveal pre code {
+	max-height: 100%;
 }
 
 
@@ -139,11 +164,25 @@ span.p2_place {
 }
 
 .colLeft {
-	width: 35%;
+	width: 45%;
 	float: left;
 }
 
 .colRight {
-	width: 60%;
+	width: 45%;
 	float: right;
+}
+
+.demoDataTable {
+	width: 500px;
+	table-layout: fixed;
+	box-shadow: 0 0 3px 0 rgba(0, 0, 0, .3);
+}
+
+.demoDataTable tr > th, .demoDataTable tr > td {
+	border: solid 1px #AAA;
+}
+
+.demoDataTable tr:last-child > td {
+	text-align: center;
 }
