Update graph-data slide

--- a/graph-data/css/original.css
+++ b/graph-data/css/original.css
@@ -122,7 +122,7 @@ hr {
 }
 
 section.pageBlock.pageBlock-first {
-	background: url(../images/bg.png) no-repeat bottom right;
+	background: url(../images/bg.svg) no-repeat bottom right;
 }
 
 .midBlock {
