--- a/graph-data/css/original.css
+++ b/graph-data/css/original.css
@@ -116,6 +116,10 @@ hr {
 	border-top: solid 1px #6A9E99;
 }
 
+pre > code, pre > code * {
+	font-family: Consolas, Monaco, 'Courier New', Courier, monospace !important;
+}
+
 .pageBlock {
 	position: relative;
 	height: 100%;
