--- a/js-api/css/original.css
+++ b/js-api/css/original.css
@@ -40,6 +40,10 @@ body, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
 	display: block;
 }
 
+.reveal ul > li + li {
+	margin-top: 15px;
+}
+
 .reveal p, .reveal ul > li, .reveal ol > li {
 	font-size: 22px;
 }
